--- a/angular.json
+++ b/angular.json
@@ -101,8 +101,14 @@
             "styles": [
               "src/styles.less",
               "node_modules/primeicons/primeicons.css",
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+
+   
+           
+                "node_modules/primeflex/primeflex.css",
+             
+                "node_modules/quill/dist/quill.snow.css"
             ],
             "scripts": []
           }
