--- a/angular.json
+++ b/angular.json
@@ -39,8 +39,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2mb",
+                  "maximumError": "10mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -71,10 +71,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "simple-ecommerce:build:production"
+              "buildTarget": "simple-ecommerce:build:production"
             },
             "development": {
-              "browserTarget": "simple-ecommerce:build:development"
+              "buildTarget": "simple-ecommerce:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -82,7 +82,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "simple-ecommerce:build"
+            "buildTarget": "simple-ecommerce:build"
           }
         },
         "test": {
