--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.9",
+    "@angular/common": "^17.0.9",
     "@angular/compiler": "^17.0.9",
     "@angular/core": "^17.0.9",
     "@angular/fire": "^17.0.0",
-    "@angular/common": "^17.0.9",
     "@angular/forms": "^17.0.9",
     "@angular/platform-browser": "^17.0.9",
     "@angular/platform-browser-dynamic": "^17.0.9",
     "@angular/router": "^17.0.9",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "firebase": "^10.7.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.3.2",
