Updating angular.json file

--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,7 @@
   "projects": {
     "simple-ecommerce": {
       "projectType": "application",
+
       "schematics": {
         "@schematics/angular:component": {
           "style": "css"
@@ -26,6 +27,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "css",
+            "baseHref": "/",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.css",
@@ -39,13 +41,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "10mb"
+                  "maximumWarning": "4mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "150kb",
+                  "maximumError": "150kb"
                 }
               ],
               "fileReplacements": [
