--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,15 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "css",
             "baseHref": "/",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
+              }
+            ],
             "styles": [
               "src/styles.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
